--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,4 +5,16 @@
 .container{
     @include myContainer
 }
+.my-main{
+    background-color: $primary-color;
+    
+    > .container{
+        
+        > h1{
+            color: $secondary-color;
+            padding: 40px;
+        }
+    }
+    
+}
 
