--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -2,6 +2,10 @@
 @use "partials/variables.scss" as *;
 
 
+.container{
+    @include myContainer
+}
+
 .nav-bar{
     @include space-between;
     section{
