--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,7 +10,7 @@
     
     > .container{
         
-        > h1{
+        > p{
             color: $secondary-color;
             padding: 40px;
         }
@@ -18,3 +18,26 @@
     
 }
 
+.my-main-2{
+    background-color: $terziary-color;
+    > .container{
+
+        > .row{
+            display: flex;
+            > .col-1-5{
+                width: calc(100% / 5);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 20px;
+
+                img{
+                    height: 40%;
+                    padding: 20px;
+                }
+            }   
+
+            
+        }
+    }
+}
