--- a/src/assets/scss/partials/mixins.scss
+++ b/src/assets/scss/partials/mixins.scss
@@ -1,3 +1,5 @@
+@use "./variables.scss" as *;
+
 @mixin myContainer{
     max-width: 1200px;
     margin: 0 auto;
@@ -7,4 +9,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+@mixin myButton{
+    padding: 10px;
+    background-color: $terziary-color;
+
 }
